# vanguard-inductions

./: Dockerfile  README.md  docker-compose.yml  hello.txt
docs/: GETTING_STARTED.md
tasks/task1/: README.md
tasks/task1/arm3dof/: README.md  package.xml  setup.cfg  setup.py
tasks/task1/arm3dof/arm3dof/: ik.py  move_arm.py
tasks/task1/arm3dof/config/: arm_controllers.yaml
tasks/task1/arm3dof/launch/: display.launch.py  gazebo.launch.py
tasks/task1/arm3dof/rviz/: arm.rviz
tasks/task1/arm3dof/urdf/: arm3dof.urdf
tasks/task2/: README.md
tasks/task3/: README.md
